--- a/index.html
+++ b/index.html
@@ -217,6 +217,13 @@
                 <li class="nav-item"><a class="nav-link" href="#EditNewJobsByID">Edit List New Jobs By ID</a></li>
                 <li class="nav-item"><a class="nav-link" href="#DeleteNewJobsByID">Delete List New Jobs By ID</a></li>
 
+
+                <li class="nav-item"><a class="nav-link" href="#CreateLeaveRequestTypes">Create Leave Request Types</a></li>
+                <li class="nav-item"><a class="nav-link" href="#ViewLeaveRequestTypes">View Leave Request Types</a></li>
+                <li class="nav-item"><a class="nav-link" href="#ViewLeaveRequestTypesByID">View List Leave Request Types By ID</a></li>
+                <li class="nav-item"><a class="nav-link" href="#EditLeaveRequestTypesByID">Edit List Leave Request Types By ID</a></li>
+                <li class="nav-item"><a class="nav-link" href="#DeleteLeaveRequestTypesByID">Delete List Leave Request Types By ID</a></li>
+
                 <li class="nav-item"><a class="nav-link" href="#CooperationMessage">Create New Cooperation Message</a></li>
 
                 <!-- Employee -->
@@ -4851,6 +4858,160 @@
     "error": false,
     "message": "New job deleted successfully"
 }x
+                            </pre>
+            </div>
+        </div>
+
+
+        <div id="CreateLeaveRequestTypes" class="card mb-4 anchor">
+            <div class="card-body">
+                <h2>Create Leave Request Types</h2>
+                <p><strong>URL</strong></p>
+                <p><code>/leave_request_types</code></p>
+                <p><strong>Method</strong></p>
+                <p><code>POST</code></p>
+                <p><strong>Request Body - Raw Json</strong></p>
+                <pre>
+{
+    "leave_type" : string,
+    "days_per_years" : int,
+    "is_requires_approval" : bool
+}
+
+                            </pre>
+                <p><strong>Note</strong></p>
+                <p><code>Include authorization token in headers.</code></p>
+                <p><strong>Response</strong></p>
+                <pre>
+{
+    "code": 201,
+    "data": {
+        "id": int,
+        "leave_type": string,
+        "days_per_years": int,
+        "is_requires_approval": bool
+    },
+    "error": false,
+    "message": "Leave request type created successfully"
+}
+                        </pre>
+            </div>
+        </div>
+
+        <div id="ViewLeaveRequestTypes" class="card mb-4 anchor">
+            <div class="card-body">
+                <h2>View Leave Request Types</h2>
+                <p><strong>URL</strong></p>
+                <p><code>/leave_request_types</code></p>
+                <p><strong>Method</strong></p>
+                <p><code>GET</code></p>
+                <p><strong>Request Body</strong></p>
+                <p><strong>Note</strong></p>
+                <p><code>Include authorization token in headers. Including Searching query params</code></p>
+                <p><strong>Response</strong></p>
+                <pre>
+{
+    "code": 200,
+    "error": false,
+    "leave_request_types": [
+        {
+            "id": int,
+            "leave_type": string,
+            "days_per_years": int,
+            "is_requires_approval": bool
+        },
+        {
+            "id": 1,
+            "leave_type": string,
+            "days_per_years": int,
+            "is_requires_approval": bool
+        }
+    ],
+    "message": "All leave request types retrieved successfully"
+}
+                    </pre>
+            </div>
+        </div>
+
+        <div id="ViewLeaveRequestTypesByID" class="card mb-4 anchor">
+            <div class="card-body">
+                <h2>View List Leave Request Types By ID</h2>
+                <p><strong>URL</strong></p>
+                <p><code>/leave_request_types/:id</code></p>
+                <p><strong>Method</strong></p>
+                <p><code>GET</code></p>
+                <p><strong>Request Body</strong></p>
+                <p><strong>Note</strong></p>
+                <p><code>Include authorization token in headers</code></p>
+                <p><strong>Response</strong></p>
+                <pre>
+{
+    "code": 200,
+    "error": false,
+    "leave_request_type": {
+        "id": int,
+        "leave_type": string,
+        "days_per_years": int,
+        "is_requires_approval": bool
+    },
+    "message": "Leave request type retrieved successfully"
+}
+                    </pre>
+            </div>
+        </div>
+
+
+        <div id="EditLeaveRequestTypesByID" class="card mb-4 anchor">
+            <div class="card-body">
+                <h2>Edit List Leave Request Types By ID</h2>
+                <p><strong>URL</strong></p>
+                <p><code>/leave_request_types/:id</code></p>
+                <p><strong>Method</strong></p>
+                <p><code>PUT</code></p>
+                <p><strong>Request Body - Raw Json</strong></p>
+                <pre>
+{
+    "leave_type" : string,
+    "days_per_years" : int,
+    "is_requires_approval" : bool
+}
+                            </pre>
+                <p><strong>Note</strong></p>
+                <p><code>Include authorization token in headers.</code></p>
+                <p><strong>Response</strong></p>
+                <pre>
+{
+    "code": 200,
+    "data": {
+        "id": int,
+        "leave_type": string,
+        "days_per_years": int,
+        "is_requires_approval": bool
+    },
+    "error": false,
+    "message": "Leave request type updated successfully"
+}
+                            </pre>
+            </div>
+        </div>
+
+
+        <div id="DeleteLeaveRequestTypesByID" class="card mb-4 anchor">
+            <div class="card-body">
+                <h2>Delete List Leave Request Types By ID</h2>
+                <p><strong>URL</strong></p>
+                <p><code>/leave_request_types/:id</code></p>
+                <p><strong>Method</strong></p>
+                <p><code>DELETE</code></p>
+                <p><strong>Note</strong></p>
+                <p><code>Include authorization token in headers.</code></p>
+                <p><strong>Response</strong></p>
+                <pre>
+{
+    "code": 200,
+    "error": false,
+    "message": "Leave request type deleted successfully"
+}
                             </pre>
             </div>
         </div>
