--- a/index.html
+++ b/index.html
@@ -211,6 +211,12 @@
                 <li class="nav-item"><a class="nav-link" href="#EditAttendancesManualByID">Edit List Attendances Manual By ID</a></li>
                 <li class="nav-item"><a class="nav-link" href="#DeleteAttendancesManualByID">Delete List Attendances Manual By ID</a></li>
 
+                <li class="nav-item"><a class="nav-link" href="#CreateOvertimeRequestManual">Create Overtime Request Manual</a></li>
+                <li class="nav-item"><a class="nav-link" href="#ViewOvertimeRequestManual">View Overtime Request Manual</a></li>
+                <li class="nav-item"><a class="nav-link" href="#ViewOvertimeRequestManualByID">View List Overtime Request Manual By ID</a></li>
+                <li class="nav-item"><a class="nav-link" href="#EditOvertimeRequestManualByID">Edit List Overtime Request Manual By ID</a></li>
+                <li class="nav-item"><a class="nav-link" href="#DeleteOvertimeRequestManualByID">Delete List Overtime Request Manual By ID</a></li>
+
                 <li class="nav-item"><a class="nav-link" href="#CreateNewJobs">Create New Jobs</a></li>
                 <li class="nav-item"><a class="nav-link" href="#ViewNewJobs">View List New Jobs</a></li>
                 <li class="nav-item"><a class="nav-link" href="#ViewNewJobsByID">View List New Jobs By ID</a></li>
@@ -4655,6 +4661,179 @@
                             </pre>
                 </div>
             </div>
+
+
+        <div id="CreateOvertimeRequestManual" class="card mb-4 anchor">
+            <div class="card-body">
+                <h2>Create Overtime Request Manual</h2>
+                <p><strong>URL</strong></p>
+                <p><code>/overtime_requests</code></p>
+                <p><strong>Method</strong></p>
+                <p><code>POST</code></p>
+                <p><strong>Request Body - Raw Json</strong></p>
+                <pre>
+{
+    "employee_id" : int,
+    "date" : string,
+    "in_time" : string,
+    "out_time" : string,
+    "reason" : string
+}
+
+                            </pre>
+                <p><strong>Note</strong></p>
+                <p><code>Include authorization token in headers.</code></p>
+                <p><strong>Response</strong></p>
+                <pre>
+{
+    "code": 201,
+    "data": {
+        "id": int,
+        "employee_id": int,
+        "username": string,
+        "date": string,
+        "in_time": string,
+        "out_time": string,
+        "reason": string
+    },
+    "error": false,
+    "message": "Overtime Request data added successfully"
+}
+                        </pre>
+            </div>
+        </div>
+
+        <div id="ViewOvertimeRequestManual" class="card mb-4 anchor">
+            <div class="card-body">
+                <h2>View Overtime Request Manual</h2>
+                <p><strong>URL</strong></p>
+                <p><code>/overtime_requests</code></p>
+                <p><strong>Method</strong></p>
+                <p><code>GET</code></p>
+                <p><strong>Request Body</strong></p>
+                <p><strong>Note</strong></p>
+                <p><code>Include authorization token in headers</code></p>
+                <p><strong>Response</strong></p>
+                <pre>
+{
+    "code": 200,
+    "data": [
+        {
+            "id": int,
+            "employee_id": int,
+            "username": string,
+            "date": string,
+            "in_time": string,
+            "out_time": string,
+            "reason": string
+        },
+        {
+            "id": int,
+            "employee_id": int,
+            "username": string,
+            "date": string,
+            "in_time": string,
+            "out_time": string,
+            "reason": string
+        }
+    ],
+    "error": false,
+    "message": "Overtime Request  retrieved successfully"
+}
+                    </pre>
+            </div>
+        </div>
+
+        <div id="ViewOvertimeRequestManualByID" class="card mb-4 anchor">
+            <div class="card-body">
+                <h2>View List Overtime Request Manual By ID</h2>
+                <p><strong>URL</strong></p>
+                <p><code>/overtime_requests/:id</code></p>
+                <p><strong>Method</strong></p>
+                <p><code>GET</code></p>
+                <p><strong>Request Body</strong></p>
+                <p><strong>Note</strong></p>
+                <p><code>Include authorization token in headers</code></p>
+                <p><strong>Response</strong></p>
+                <pre>
+{
+    "code": 200,
+    "data": {
+        "id": int,
+        "employee_id": int,
+        "username": string,
+        "date": string,
+        "in_time": string,
+        "out_time": string,
+        "reason": string
+    },
+    "error": false,
+    "message": "Attendance data retrieved successfully"
+}
+                    </pre>
+            </div>
+        </div>
+
+
+        <div id="EditOvertimeRequestManualByID" class="card mb-4 anchor">
+            <div class="card-body">
+                <h2>Edit List Overtime Request Manual By ID</h2>
+                <p><strong>URL</strong></p>
+                <p><code>/overtime_requests/:id</code></p>
+                <p><strong>Method</strong></p>
+                <p><code>PUT</code></p>
+                <p><strong>Request Body - Raw Json</strong></p>
+                <pre>
+{
+    "employee_id" : int,
+    "date" : string,
+    "in_time" : string,
+    "out_time" : string,
+    "reason" : string
+}
+                            </pre>
+                <p><strong>Note</strong></p>
+                <p><code>Include authorization token in headers.</code></p>
+                <p><strong>Response</strong></p>
+                <pre>
+{
+    "code": 200,
+    "data": {
+        "id": int,
+        "employee_id": int,
+        "username": string,
+        "date": string,
+        "in_time": string,
+        "out_time": string,
+        "reason": string
+    },
+    "error": false,
+    "message": "Attendance data updated successfully"
+}
+                            </pre>
+            </div>
+        </div>
+
+
+        <div id="DeleteOvertimeRequestManualByID" class="card mb-4 anchor">
+            <div class="card-body">
+                <h2>Delete List Overtime Request Manual By ID</h2>
+                <p><strong>URL</strong></p>
+                <p><code>/overtime_requests/:id</code></p>
+                <p><strong>Method</strong></p>
+                <p><code>DELETE</code></p>
+                <p><strong>Note</strong></p>
+                <p><code>Include authorization token in headers.</code></p>
+                <p><strong>Response</strong></p>
+                <pre>
+{
+    "code": 200,
+    "error": false,
+    "message": "Overtime Request data deleted successfully"
+}
+                            </pre>
+            </div>
+        </div>
 
 
         <div id="CreateNewJobs" class="card mb-4 anchor">
